--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Moons of Mars</h1>
   <h2>Deimos</h2>
   <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
-  <dl class="">
+  <dl class="deimos">
     <dt>Discovered by:</dt>
     <dd>Asaph Hall</dd>
     <dt>Discovery date:</dt>
@@ -21,7 +21,7 @@
   </dl>
   <h2>Phobos</h2>
   <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km and is seven times more massive than the outer moon, Deimos.</p>
-  <dl class="">
+  <dl class="phobos">
     <dt>Discovered by:</dt>
     <dd>Asaph Hall</dd>
     <dt>Discovery date:</dt>
