Add images to class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   <h1>Moons of Mars</h1>
-  <h2>Deimos</h2>
+  <figure>
+    <img class "img-flex" src="images/deimos.jpg" alt="">
+    <figcaption>
+      <h2>Deimos</h2>
+    </figcaption>
+  </figure>
   <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
   <dl class="deimos">
     <dt>Discovered by:</dt>
@@ -19,7 +24,12 @@
     <dt>Adjectives:</dt>
     <dd>Deimosian</dd>
   </dl>
-  <h2>Phobos</h2>
+  <figure>
+    <img class "img-flex" src="images/phobos.jpg" alt="">
+    <figcaption>
+      <h2>Phobos</h2>
+    </figcaption>
+  </figure>
   <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km and is seven times more massive than the outer moon, Deimos.</p>
   <dl class="phobos">
     <dt>Discovered by:</dt>
